🔧 Continuing to STIG httpd

--- a/httpd/Makefile
+++ b/httpd/Makefile
@@ -1,5 +1,6 @@
 # Note: the "-" in front of the command signifies that the Makefile should continue even if this command returns an error
 rerun:
+	- docker stop httpd
 	- docker rm httpd
 	- docker rmi httpd-hardened:latest
 	docker build -t httpd-hardened .
