--- a/httpd/confs/httpd.conf
+++ b/httpd/confs/httpd.conf
@@ -190,7 +190,7 @@ LoadModule unixd_module modules/mod_unixd.so
 #LoadModule dav_lock_module modules/mod_dav_lock.so
 #LoadModule vhost_alias_module modules/mod_vhost_alias.so
 #LoadModule negotiation_module modules/mod_negotiation.so
-# LoadModule dir_module modules/mod_dir.so
+LoadModule dir_module modules/mod_dir.so
 #LoadModule imagemap_module modules/mod_imagemap.so
 #LoadModule actions_module modules/mod_actions.so
 #LoadModule speling_module modules/mod_speling.so
@@ -584,5 +584,5 @@ LoadModule session_module modules/mod_session.so
 # unixd_module (shared)             # Keep this as best practice
 # status_module (shared)
 # autoindex_module (shared)
-# dir_module (shared)
+# dir_module (shared)               # Keep this as best practice
 # alias_module (shared)
