🐛 Ironbank httpd image working starting with non-root user

--- a/httpd/Makefile
+++ b/httpd/Makefile
@@ -4,7 +4,7 @@ rerun:
 	- docker rm httpd
 	- docker rmi httpd-hardened:latest
 	docker build -t httpd-hardened .
-	docker run -dit --name httpd -p 8080:80 httpd-hardened
+	docker run -d --name httpd -p 8080:80 httpd-hardened
 
 stop:
 	docker stop httpd
